# allerhande

./: CMakeLists.txt  README.md
src/: cache.hpp  cli.hpp  database.hpp  interface.cpp  interface.hpp  main.cpp  scraper.hpp  updater.hpp
src/parsers/: ah_recipe_parser.hpp  index_parser.hpp  recipe_parser.hpp  ww_category_parser.hpp  ww_main_parser.hpp  ww_shelf_parser.hpp
src/serialization/: json_serializer.cpp  json_serializer.hpp  serialize_fusion.hpp  serializer.cpp  serializer.hpp
src/util/: downloader.cpp  downloader.hpp  html_parser.cpp  html_parser.hpp  html_recorder.hpp  html_watcher.hpp  htmlparser.cpp  htmlparser.hpp  util.hpp
